<resources>
    <string name="app_name">Market</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="user_name_error">Invalid Username</string>
    <string name="pass_error">Invalid Password</string>
    <string name="grocery_image">Grocery Image</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="add_item_in_cart">Add items to your cart</string>
    <string name="pay_amount">Pay ₹ %1$d</string>
    <string name="profile_pic">profile_pic</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_order">Place Order</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="my_orders">My Orders</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="address_loc">Street</string>
    <string name="address_pin">Pincode</string>
    <string name="address_type">Address Type</string>
    <string name="register">Register</string>
    <string name="string_hint">Search Hint</string>

    <string name="search_activity">Search</string>

</resources>
